--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "redis": "^4.0.2"
+    "redis": "^4.0.2",
+    "xss": "^1.0.10"
   }
 }
